# ChangeLog for media-video/totem
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/totem/ChangeLog,v 1.270 2009/12/30 02:15:31 nirbheek Exp $

  30 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  -totem-2.26.4-r1.ebuild, -totem-2.28.1.ebuild, -totem-2.28.3.ebuild:
  Remove old versions

*totem-2.26.5-r1 (30 Dec 2009)

  30 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  +totem-2.26.5-r1.ebuild,
  +files/totem-2.26.5-firefox-plugin-apple-trailers.patch:
  Fix playing of apple trailers using the firefox plugin, bug 292852

*totem-2.28.5 (23 Dec 2009)

  23 Dec 2009; Romain Perier <mrpouet@gentoo.org> +totem-2.28.5.ebuild:
  Version bump.

*totem-2.26.5 (13 Dec 2009)

  13 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org> -totem-2.26.4.ebuild,
  +totem-2.26.5.ebuild:
  Bump to 2.26.5; remove old -- one crasher fix in browser plugin

  03 Dec 2009; Brent Baude <ranger@gentoo.org> totem-2.26.3-r1.ebuild:
  Marking totem-2.26.3-r1 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> totem-2.26.3-r1.ebuild:
  alpha/ia64/sparc stable wrt #281427

*totem-2.28.4 (21 Nov 2009)

  21 Nov 2009; Romain Perier <mrpouet@gentoo.org> +totem-2.28.4.ebuild:
  Version bump.

*totem-2.28.3 (17 Nov 2009)

  17 Nov 2009; Romain Perier <mrpouet@gentoo.org>
  +totem-2.28.3.ebuild:
  Version bump, various bugfixes.

*totem-2.26.4-r1 (14 Nov 2009)

  14 Nov 2009; Romain Perier <mrpouet@gentoo.org>
  +totem-2.26.4-r1.ebuild,
  +files/totem-2.26.4-youtube-plug-play-vids.patch:
  Fix a problem in the youtube plugin, When trying to play a video, bug
  #292839. Thanks to Ryan May.

  05 Nov 2009; Markus Meier <maekke@gentoo.org> totem-2.26.3-r1.ebuild:
  arm stable, bug #281427

  01 Nov 2009; Gilles Dartiguelongue <eva@gentoo.org> totem-2.28.1.ebuild:
  Add missing docbook-xml-dtd:4.5, bug #291329.

*totem-2.28.1 (29 Oct 2009)
