@@ -12,10 +12,10 @@ DIST totem-2.28.4.tar.bz2 3081676 RMD160 c427f08842f263bdb028da8eb9e118e219866bb
 DIST totem-2.28.5.tar.bz2 3083946 RMD160 20fa09187a82380d7b7d19c2fb5e8a5a4475307e SHA1 1653528d66a1f11da4bc8f66746828c4a31343d6 SHA256 c788bb314addbeeb2b27a2af0f7448752db22dcfaf8b0a4e704463ba9a9dc063
 EBUILD totem-2.20.3.ebuild 5032 RMD160 2b784ab3e1fe07fc5846e3f0e241c34a1de2a3d0 SHA1 df543761b7eb778820057231ed5adac85231fca3 SHA256 ff7ffe9233c8c168288118d3c55e520c0d6f955804a0a3c13ad292d580392320
 EBUILD totem-2.24.4-r1.ebuild 4146 RMD160 0bbec55a118f60f3a93ccbffbc488c500aa8de0c SHA1 a0142a4c7822b14dece5c7558acc37aafc995947 SHA256 aea75b6d792c5008f19e369e26532d5d04929c8917c1617ea0cf084584cbb255
-EBUILD totem-2.26.3-r1.ebuild 4607 RMD160 e00455982cd7176e812befbe5fbc11108afbd5a4 SHA1 342c47f3f2bf7f44fad724a39ed90efb6181400e SHA256 61290a93c0f13ecb6a1f055a6e646608ea3e9f121142ca92d66e5d58255cae75
-EBUILD totem-2.26.5-r1.ebuild 4699 RMD160 d76d7981344f8317c32d00455dbcbd73ed67c9e0 SHA1 d3bc7fc758dfa145a58a80289ce3667c49d3e636 SHA256 01c856b1d6d8db5866e187c6654e1ec54410efa73f29c55c6c2c5ceaa7e20651
-EBUILD totem-2.26.5.ebuild 4565 RMD160 5399b8b30ac07e941a22d90efc973d8fbe91ef42 SHA1 0e6e4209fd20b0cd3cbf375589ec2facf63edcb6 SHA256 26edef62efc7d10bd14d2edd3f6b88006bccc8328c7aa60bc57d5156233e264c
+EBUILD totem-2.26.3-r1.ebuild 4609 RMD160 e41975bcac1ea766ef7f629ba4b55df615fe76da SHA1 a9e50062bc439695eefe24001b85c354ea36ee0f SHA256 03eb45c8edc15ff1e0ea5c49038f20eb395f7187f8789eeb726de90e57b45f03
+EBUILD totem-2.26.5-r1.ebuild 4700 RMD160 d8ffa95e5d32c603fb1eba70de08b5af1d22f913 SHA1 3aa33fafd1eab1324c3a4bc0df79507e32331183 SHA256 220908cc37954f74bb841f14773e20b9745b968b6fde6976b118ca3891480333
+EBUILD totem-2.26.5.ebuild 4566 RMD160 79d1fc1f577b84c10ac3f5ff780b55578505f192 SHA1 fcbc158a20c9921b82a5974f9ddc0494b7763e84 SHA256 7dea02a3f480bcd6610aa27dea85c2fd484a989f656d6e7c0cfb623e59521b6d
 EBUILD totem-2.28.4.ebuild 4689 RMD160 622f41a4eb946c4f22dbfc8f4474dd9471fd66ee SHA1 f9b4ae6b4e1a9640fe7ba244f8ee4a054047f42f SHA256 1d6249fea61dbc0b9364ab7a36e0e15965528f873622b6e4574644751f3cca62
 EBUILD totem-2.28.5.ebuild 4689 RMD160 7f901a7dba891c92e7e176a0d80e97e804e3c2b6 SHA1 b3911abf37237d16d95e5d9971d7c50a57a50705 SHA256 01aca97df144f899fc3b9c2de82df51de261c62ed82f93c69b35b7b82faaccdd
-MISC ChangeLog 38386 RMD160 7dbfbb88b1514edd118768dd288b524fe4a512fe SHA1 7d239338c7f50dc9f285e5ca57bf44c2b75f17c0 SHA256 4c1fe10a95d3b10845b73539998559294feba02254c3cfed2a7a0cf28bd116d5
+MISC ChangeLog 38533 RMD160 150da468ccf7eceae673a4bf5c0af4a1ba2bc3e1 SHA1 fbb2f0fab587bdf4bc056065b9d0faacfe6eb248 SHA256 5691f4092b60b652e53e6c10dc442be8d4c144ba7696a60cde8f5651a0f8c690
 MISC metadata.xml 1872 RMD160 0678604a8be6f8432186df7ce003b9e4be9e0fc4 SHA1 63b76103e6b7c2c5aec965a5610643f4a25df37e SHA256 31b4e571c11c47e62c7f7e66698ac12e79159d59bad01de42461cf308d31f833
