@@ -1,6 +1,10 @@
 # ChangeLog for media-video/totem
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/totem/ChangeLog,v 1.270 2009/12/30 02:15:31 nirbheek Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/totem/ChangeLog,v 1.271 2010/01/18 01:14:50 jer Exp $
+
+  18 Jan 2010; Jeroen Roovers <jer@gentoo.org> totem-2.26.3-r1.ebuild,
+  totem-2.26.5.ebuild, totem-2.26.5-r1.ebuild:
+  Stable for HPPA (bug #281427).
 
   30 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
   -totem-2.26.4-r1.ebuild, -totem-2.28.1.ebuild, -totem-2.28.3.ebuild:
